--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,4 @@
 arb-dir: lib/l10n
-template-arb-file: app_en.arb
+template-arb-file: app_fa.arb
 output-localization-file: app_localizations.dart
 untranslated-messages-file: l10n_errors.txt
